Try to fix image resize on mobile

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center fixed;
-  height: 100%;
+  height: calc(100% + 70px);
   color: #eaebe4;
   display: flex;
   flex-direction: column;
